# server/get_follow_request.go
@@ -9,10 +9,9 @@ import (
 	"github.com/dolater/dolater-api/model"
 	"github.com/dolater/dolater-api/server/utility"
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 )
 
-func (s *Server) CreateTask(c *gin.Context) {
+func (s *Server) GetFollowRequest(c *gin.Context, uid string) {
 	token := utility.GetToken(c)
 	if token == nil {
 		message := "Unauthorized"
@@ -38,27 +37,6 @@ func (s *Server) CreateTask(c *gin.Context) {
 		sqldb.Close()
 	}()
 
-	var requestBody api.CreateTaskInput
-	if err := c.BindJSON(&requestBody); err != nil {
-		message := err.Error()
-		c.AbortWithStatusJSON(http.StatusBadRequest, api.Error{
-			Message: &message,
-		})
-		return
-	}
-
-	task := model.Task{
-		Id:     uuid.New(),
-		UserId: token.UID,
-		URL:    &requestBody.Url,
-	}
-
-	if err := db.Create(&task).Error; err != nil {
-		message := err.Error()
-		c.JSON(http.StatusInternalServerError, api.Error{
-			Message: &message,
-		})
-	}
-
-	c.JSON(http.StatusCreated, task)
+	user := model.User{}
+	c.JSON(http.StatusOK, user)
 }
